# badtetriobot

./: .gitignore  README.md  pyproject.toml  run.py
badbot/: __main__.py
badbot/cogs/: admin.py  fortune.py  info.py  ranks.py
badbot/cogs/util/: checks.py
badbot/scripts/: rank_thresholds.py
