[tool.poetry]
name = "badbot"
version = "0.2.0"
description = ""
authors = ["Kent D <lolexplode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
emoji-country-flag = "^1.3.0"
pytz = "^2021.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "run:bot"
